--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Auth/UserRow.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Auth/UserRow.razor
@@ -1,7 +1,7 @@
 ﻿@using TicketingSystemFrontend.Client.Services.Interfaces.Auth
+@using static TicketingSystemFrontend.Client.Pages.Auth.AdminPanel
 @inject IUserService UserService
 
-@using static TicketingSystemFrontend.Client.Pages.AdminPanel
 <tr>
     <td>@User.Email</td>
     <td>@User.UserName</td>
