--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
@@ -40,14 +40,23 @@
         </div>
     </div>
     @*TODO: расширить облать драг н дропа файлов чтобы не приходилось целиться в маленькое окошко, а также выделить эту область рамкой для красоты*@
-    <MudPaper Class="pa-6 d-flex justify-center align-center"
-              Style="border:2px dashed var(--mud-palette-primary); min-height:150px; cursor:pointer"
+    <MudPaper Class="pa-6 d-flex align-center"
+              Style="border:2px dashed var(--mud-palette-primary); min-height:150px;"
               @ondrop="OnDrop"
               @ondragover:preventDefault>
         <div>
             <MudIcon Icon="@Icons.Material.Filled.CloudUpload" Size="Size.Large" Color="Color.Primary" />
             <MudText Typo="Typo.subtitle1">Drag & drop files here or click below</MudText>
-            <InputFile OnChange="OnFilesChanged" multiple class="border" />
+            <InputFile OnChange="OnFilesChanged" multiple style="
+                width: 100%;
+                height: 100%;
+                font-size: 18px;
+                padding: 20px;
+                padding-right: 200%;
+                padding-left: 150%;
+                border: 2px solid var(--mud-palette-primary);
+                border-radius: 4px;
+                box-shadow: 0 0 5px rgba(0, 0, 0, 1);" />
         </div>
     </MudPaper>
     @*TODO: add "Files:" for better UX*@
