--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
@@ -51,7 +51,7 @@
                 width: 100%;
                 height: 100%;
                 font-size: 18px;
-                padding: 20px;
+                padding: 15%;
                 padding-right: 200%;
                 padding-left: 150%;
                 border: 2px solid var(--mud-palette-primary);
