--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketDetails.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketDetails.razor
@@ -70,12 +70,10 @@ else
             }
         }
 
-        <EditForm OnValidSubmit="AddCommentAsync">
+        <EditForm Model="@this" OnValidSubmit="AddCommentAsync">
             <InputTextArea @bind-Value="newComment" class="form-control" placeholder="Leave a comment..." />
             <button type="submit" class="btn btn-primary mt-2">Post Comment</button>
         </EditForm>
-
-
     </div>
 
 }
@@ -94,7 +92,7 @@ else
     protected override async Task OnParametersSetAsync()
     {
         ticket = await TicketService.GetByIdAsync(id);
-        //comments = await TicketService.GetCommentsByTicketIdAsync(id);
+        comments = await TicketService.GetCommentsByTicketIdAsync(id);
     }
 
     private async Task DeleteTicket()
@@ -137,18 +135,18 @@ else
 
     private async Task AddCommentAsync()
     {
-        // var success = await TicketService.AddCommentAsync(new TicketCommentCreateRequest
-        // {
-        //     TicketId = id,
-        //     Description = newComment,
-        //     UserId = currentUserId
-        // });
+        var success = await TicketService.AddCommentAsync(id, new TicketCommentCreateRequest
+        {
+            TicketId = id,
+            Description = newComment,
+            UserId = currentUserId
+        });
 
-        // if (success)
-        // {
-        //     newComment = string.Empty;
-        //     reload comments list after successful add
-        //     comments = await TicketService.GetCommentsByTicketIdAsync(id);
-        // }
+        if (success)
+        {
+            newComment = string.Empty;
+            // reload comments list after successful add
+            comments = await TicketService.GetCommentsByTicketIdAsync(id);
+        }
     }
 }
