rename Filesting > FileList

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Components/FileForm.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Components/FileForm.razor
@@ -1,7 +1,7 @@
 ﻿@using MudBlazor
 
 <UploadFilesField @bind-Files="Files" />
-<FileListing Files="Files" />
+<FileList Files="Files" />
 
 @code {
     [Parameter]
