Comment fixed. Now on each article is his own list of comments. Also the name of commentator now works

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketComponents/TicketCard.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketComponents/TicketCard.razor
@@ -17,7 +17,7 @@
             </p>
             <p class="text-muted mb-0 small">
                 Category:
-                <span class="badge bg-primary">@Ticket.CategoryName</span>
+                <span class="badge bg-primary">@Ticket.TicketCategoryName</span>
             </p>
             <p class="text-muted mb-0 small">
                 Status:
